fix: justify content and gap to flexbox
move flexbox back to list group.
change justify content from center to space evenly.
change padding to gap.
eliminate width and height.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,25 +16,23 @@
   background-position: center;
   margin-top: 60px;
   list-style-type: none;
-}
-
-.list-group-item {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+}
+
+.list-group-item {
   padding: 1px;
   background-color: transparent;
   border-top: 3px solid yellow;
   border-bottom: 3px solid yellow;
   overflow-x: hidden;
   overflow-y: hidden;
-  padding: 10px;
+  gap: 10px;
   background: #333;
   border-radius: 10px;
-  width: 100%;
-  height: 100%;
   color: #eee;
 }
 
